--- a/styles/globals.css
+++ b/styles/globals.css
@@ -103,5 +103,10 @@ a {
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
+    scroll-behavior: smooth;
   }
 }
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
